Path added to favicon. Added weather command to get weather information. Game location added. used by weather command. Fixed so that messages from important and broadcast are also retrieved in history. Added missing date to important message. hackroom string is printed in upper case to make it easier to read. Password length limit on register user removed. Fix for enter not working in hackroom and importantmsg. History is now retrieved not only on reconnect but also when the user opens the site again and is already logged in. Added letter spacing to increase readability.

--- a/private/styles/main.css
+++ b/private/styles/main.css
@@ -8,6 +8,7 @@ body {
     background-color: black;
     font-family: monospace;
     font-size: 1em;
+    letter-spacing: 0.05em;
     white-space: pre-wrap;
     overflow: hidden;
     background: -webkit-linear-gradient(#212e21 50%, black 50%);
@@ -78,6 +79,7 @@ pre {
 .logo {
     white-space: pre;
     line-height: 1.2;
+    letter-spacing: 0;
     text-transform: uppercase;
     word-wrap: normal;
 }
